# KnowledgeRep-LLMs

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  data.dvc  pyproject.toml  requirements.txt  setup.py
notebooks/: 00_data-retrieval.ipynb  01_scraping-dsi.ipynb  02_qa-pair.ipynb  03_fine-tuning.ipynb  04_colab-full-model.ipynb  05_colab-attention-model.ipynb  06_colab-mlp-model.ipynb
presentaion-materials/: 00_overview.md  01_full-model-card.md  01_model-card.md  02_attention-model-card.md  02_data-card.md  03_mlp-model-card.md  04_data-card.md
scripts/data-scraping/: README.md  collect_data.py
