[build-system]
requires = ["setuptools>=66", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-rep-llms"
version = "0.1.0"
description = "Research project investigating knowledge representation in LLM MLP layers"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { text = "MIT License" }
authors = [{ name = "Shivam Tyagi", email = "st.shivamtyagi.01@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
urls = { "Homepage" = "https://github.com/FrostNT1/KnowledgeRep-LLMs" }

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
